# medcatmlflow

./: .env  .gitignore  Dockerfile  README.md  docker-compose-dev.yml  docker-compose-prod.yml  docker-compose.yml  mypy.ini  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: main.yml  release.yml
src/: main.py  tracker.py
src/app/: __init__.py  app.py  datasets.py  envs.py  mct_integration.py  medcat_integration.py  metadata.py  mlflow_integration.py  models.py  run_app.sh  utils.py
src/app/main/: envs.py  models.py  utils.py  views.py
src/app/medcat_linkage/: mct_integration.py  medcat_integration.py  metadata.py
src/app/modelmanage/: mlflow_integration.py  views.py
src/app/performance/: cache.py  datasets.py  imaging.py  views.py
src/app/templates/: all_trees.html  base.html  browse_files.html  create_experiment.html  file_info.html  history.html  landing.html  manage_datasets.html  manage_experiments.html  project_annotate_entities.html  show_performance.html  upload.html  upload_dataset.html
src/integration/: medcat.py
src/medcatmlflow.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/models/: annotations.py  loader.py  model.py
src/tracking/: performance.py  trackers.py
tests/app/: __init__.py
tests/app/main/: test_utils.py
tests/app/medcat_linkage/: helpers.py  test_medcat_integration.py  test_metadata.py
tests/models/: test_annotations.py  test_loader.py
tests/models/integration/: test_medcat.py
tests/resources/datasets/: example_dataset.json
tests/tracking/: test_performance.py
(+15 files in other folders)
