[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "medcatmlflow"
authors = [
    {name = "Mart Ratas", email = "mart.ratas@kcl.ac.uk"},
]
description = "MedCAT model tracking with MLFlow"
readme = "README.rst"
requires-python = ">=3.8"
keywords = ["MedCAT", "MLFlow"]
license = {text = "Elastic License 2.0"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "mlflow~=2.1.1",
    "dill~=0.3.4",
    "medcat~=1.6.0",
    "spacy<3.5.0,>=3.4.0", # for medcat compatibility
]
version = "0.0.1"