[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "medcatmlflow"
authors = [
    {name = "Mart Ratas", email = "mart.ratas@kcl.ac.uk"},
]
description = "MedCAT model tracking with MLFlow"
readme = "README.rst"
requires-python = ">=3.8"
keywords = ["MedCAT", "MLFlow"]
license = {text = "Elastic License 2.0"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "mlflow",
    "dill~=0.3.4",
    "medcat~=1.8.0",
    "spacy>=3.1.0", # for medcat compatibility,
    "Flask",
    "Flask-SQLAlchemy",
    "SQLAlchemy",
    "anytree"
]
version = "0.1.1"